src/snapshots/libwally__resolution__tests__one_dependency.snap
---
source: src/resolution.rs
expression: resolve

---
activated:
  - biff/minimal@0.1.0
  - biff/one-dependency@0.1.0
metadata:
  biff/minimal@0.1.0:
    realm: shared
    origin_realm: shared
    source_registry: DefaultRegistry
    is_workspace_member: false
  biff/one-dependency@0.1.0:
    realm: shared
    origin_realm: shared
    source_registry: DefaultRegistry
    is_workspace_member: false
shared_dependencies:
  biff/one-dependency@0.1.0:
    Minimal: biff/minimal@0.1.0
server_dependencies: {}
dev_dependencies: {}

