src/snapshots/libwally__resolution__tests__one_dependency_no_upgrade.snap
---
source: src/resolution.rs
expression: resolved

---
activated:
  - biff/minimal@1.0.0
  - biff/one-dependency@1.0.0
metadata:
  biff/minimal@1.0.0:
    realm: shared
    origin_realm: shared
    source_registry: DefaultRegistry
    is_workspace_member: false
  biff/one-dependency@1.0.0:
    realm: shared
    origin_realm: shared
    source_registry: DefaultRegistry
    is_workspace_member: false
shared_dependencies:
  biff/one-dependency@1.0.0:
    Minimal: biff/minimal@1.0.0
server_dependencies: {}
dev_dependencies: {}

