src/snapshots/libwally__resolution__tests__shared_to_server.snap
---
source: src/resolution.rs
expression: resolve

---
activated:
  - biff/root@1.0.0
  - biff/server@1.0.0
metadata:
  biff/root@1.0.0:
    realm: shared
    origin_realm: shared
    source_registry: DefaultRegistry
    is_workspace_member: false
  biff/server@1.0.0:
    realm: server
    origin_realm: server
    source_registry: DefaultRegistry
    is_workspace_member: false
shared_dependencies: {}
server_dependencies:
  biff/root@1.0.0:
    Server: biff/server@1.0.0
dev_dependencies: {}

